--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,13 +5,21 @@ Version: 0.1.0
 Author@R: person("Chris", "Guiterman", role = c("cre", ctb"))
 Author: Chris Guiterman [aut, cre]
 Maintainer: Chris Guiterman <chguiterman@email.arizona.edu>
+URL: https://github.com/chguiterman/slideRun/
 Description: slideRun is an extension of the burnr library, with added
     and modified functionality to accomodate dendro-avalanche research.
 License: GPL (>= 3)
-Depends: R (>= 3.4.3), 
-         burnr
+Suggests:
+    testthat,
+    knitr,
+    rmarkdown
+Imports:
+    burnr,
+    MASS,
+    stats,
+    ggplot2,
+    reshape2,
+    plyr
 Encoding: UTF-8
 LazyData: true
-Imports:
-    burnr
 RoxygenNote: 6.0.1
